# tree-sitter-dockerfile

./: Cargo.toml  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go  go.mod
