[package]
name = "tree-sitter-dockerfile"
description = "dockerfile grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "dockerfile"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/izm1chael/tree-sitter-dockerfile"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
